# ComfyUI-Embedding_Picker

./: .gitignore  README.md  __init__.py  node.py  pyproject.toml
.github/workflows/: publish.yml
js/: quickNodes.js
